Added -background -platformGen Script -platformDegen Script -Prefabs folder with some basic prefabs -Syd

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\PlatformDestroyer.cs" />
+    <Compile Include="Assets\Scripts\PlatformGenerator.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>/Users/Sydney/Desktop/LevelGenPracticeAlphaMail/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
